changed alert to halo

--- a/class1/form.html
+++ b/class1/form.html
@@ -114,14 +114,14 @@ li a:hover {
   var subject = document.getElementById("subject");
   var myFile = document.getElementById("myFile");
   var submit = document.getElementById("submit");
- var mystring=fname.value + " "+ lname.value + " " + phonenumber.value + " " + subjet.value + " ";
+ var mystring=fname.value + " "+ lname.value + " " + phonenumber.value + " " + subject.value + " ";
 if(myfile.value==null){
   mystring += "no file selected ";
 }else {
   mystring += " file selected ";
 }
 submit.onclick=function (params) {
-  alert("hi")
+  alert("halo")
 }
 </script>
 </body>
